--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,9 @@
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
     },
-    "extends": "next/core-web-vitals"
+    "extends": [
+        "next",
+        "next/core-web-vitals",
+        "prettier"
+    ]
 }
