--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "inclusionweb",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "gen-types": "supabase gen types typescript --linked > ./types/supabase.ts"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
-    "@newhighsco/next-plugin-svgr": "^3.0.94",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.22.0",
-    "@types/node": "20.1.0",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "avataaars": "^2.0.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "^13.4.1",
-    "postcss-import": "^15.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
-    "swr": "^2.1.5",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "uuid": "^9.0.0",
-    "yup": "^1.1.1",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "supabase": "^1.58.1"
-  }
+    "name": "inclusionweb",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "gen-types": "supabase gen types typescript --linked > ./types/supabase.ts"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.1.0",
+        "@newhighsco/next-plugin-svgr": "^3.0.94",
+        "@supabase/auth-helpers-nextjs": "^0.6.1",
+        "@supabase/auth-helpers-react": "^0.3.1",
+        "@supabase/supabase-js": "^2.22.0",
+        "@types/node": "20.1.0",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "18.2.4",
+        "autoprefixer": "10.4.14",
+        "avataaars": "^2.0.0",
+        "eslint": "8.40.0",
+        "eslint-config-next": "13.4.1",
+        "next": "^13.4.1",
+        "postcss-import": "^15.1.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.9",
+        "swr": "^2.1.5",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4",
+        "yup": "^1.1.1"
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^8.0.1",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "supabase": "^1.58.1"
+    }
 }
