--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,6 @@
     },
     "extends": [
         "next",
-        "next/core-web-vitals",
-        "prettier"
+        "next/core-web-vitals"
     ]
 }
