--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gen-types": "supabase gen types typescript --linked > ./types/supabase.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@hookform/resolvers": "^3.1.0",
     "@newhighsco/next-plugin-svgr": "^3.0.94",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
@@ -23,6 +25,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "next": "^13.4.1",
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
