--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,9 @@
         "app/page.jsx",
         "app/page.jsx",
         "app/api/users/route.ts",
-        "app/api/users/route.ts"
+        "app/api/users/route.ts",
+        "components/form/DropDownCheckboxes.jsx",
+        "components/form/DropDownCheckboxes.jsx"
     ],
     "exclude": [
         "node_modules"
