--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "swr": "^2.1.5",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4",
+        "usehooks-ts": "^2.9.1",
         "yup": "^1.1.1"
     },
     "devDependencies": {
