--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-hook-form": "^7.43.9",
         "react-select": "^5.7.3",
         "swr": "^2.1.5",
+        "tailwind-merge": "^1.12.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4",
         "usehooks-ts": "^2.9.1",
