--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@dnd-kit/sortable": "^7.0.2",
         "@hookform/resolvers": "^3.1.0",
         "@newhighsco/next-plugin-svgr": "^3.0.94",
+        "@react-pdf/renderer": "^3.1.10",
         "@supabase/auth-helpers-nextjs": "^0.6.1",
         "@supabase/auth-helpers-react": "^0.3.1",
         "@supabase/supabase-js": "^2.22.0",
@@ -31,9 +32,9 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
+        "react-screen-capture": "^1.0.1",
         "react-select": "^5.7.3",
         "swr": "^2.1.5",
-        "tailwind-merge": "^1.12.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4",
         "usehooks-ts": "^2.9.1",
