--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "@types/react-dom": "18.2.4",
         "autoprefixer": "10.4.14",
         "avataaars": "^2.0.0",
+        "classnames": "^2.3.2",
         "clsx": "^1.2.1",
+        "dayjs": "^1.11.8",
         "eslint": "8.40.0",
         "eslint-config-next": "13.4.1",
         "next": "^13.4.1",
