--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-hook-form": "^7.43.9",
         "react-screen-capture": "^1.0.1",
         "react-select": "^5.7.3",
+        "sharp": "^0.32.1",
         "swr": "^2.1.5",
         "tailwindcss": "3.3.2",
         "typescript": "5.0.4",
