--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     },
     "devDependencies": {
         "@svgr/webpack": "^8.0.1",
+        "encoding": "^0.1.13",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
