--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.3.0",
         "supabase": "^1.58.1"
     }
 }
