--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,8 +40,8 @@
         "app/welcome/page.tsx",
         "app/page.jsx",
         "app/page.jsx",
-        "app/api/users/route.ts",
-        "app/api/users/route.ts",
+        "app/api/users/[id]/route.tste.ts",
+        "app/api/users/[id]/route.tste.ts",
         "components/form/DropDownCheckboxes.jsx",
         "components/form/DropDownCheckboxes.jsx",
         "utils/webs.js",
