--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint": "8.40.0",
         "eslint-config-next": "13.4.1",
         "framer-motion": "^10.12.16",
+        "hamburger-react": "^2.5.0",
         "next": "^13.4.1",
         "postcss-import": "^15.1.0",
         "react": "18.2.0",
